# grados

./: .gitignore  README.md  dev.ipynb  domore-dev.ipynb  pyproject.toml
grados/: engine.py  nn.py  test.py  train.py
