[tool.poetry]
name = "grados"
version = "0.1.0"
description = ""
authors = ["Philipp Zettl"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
torch = [
  { version = "^2.0.0+cu117", source = "torch_cu117", markers = "extra=='cuda'", extras = ["cuda"], optional = true },
]
torchaudio = [
  { version = "2.0.1+cu117", source = "torch_cu117", markers = "extra=='cuda'", extras = ["cuda"], optional = true },
]
torchvision = [
  { version = "0.15.0+cu117", source = "torch_cu117", markers = "extra=='cuda'", extras = ["cuda"], optional = true },
]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.3"

[tool.poetry.extras]
cuda = ["torch", "torchvision", "torchaudio"]

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
